<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="icon_favorite">Icon favorite</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>

</resources>